--- a/.github/workflows/front_cd.yml
+++ b/.github/workflows/front_cd.yml
@@ -22,14 +22,14 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version-file: .nvmrc
-        working-directory: frontend
+        working-directory: ./frontend
 
       - name: 🏗️ Install Dependencies
-        working-directory: frontend
+        working-directory: ./frontend
         run: npm install
 
       - name: 🏗️ Build
-        working-directory: frontend
+        working-directory: ./frontend
         run: npm run build
 
       - name: 📤 Upload Artifact File
