--- a/.github/workflows/front_cd.yml
+++ b/.github/workflows/front_cd.yml
@@ -24,7 +24,7 @@ jobs:
       - name: 🏗️ Install Node.js
         uses: actions/setup-node@v4
         with:
-          node-version-file: .nvmrc
+          node-version: 20.15.1
 
       - name: 🏗️ Install Dependencies
         run: npm install
